--- a/css/common.css
+++ b/css/common.css
@@ -15,6 +15,13 @@ body {
   line-height: 1.5;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+
 ul {
   list-style: none;
 }
@@ -44,4 +51,17 @@ h2 {
 
 .item:not(:last-child) {
   margin-bottom: 24px;
+}
+.gallery {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 48px 24px;
+  flex-basis: calc((100% - 48px) / 3);
+  padding-block: 100px;
+}
+.gallery li{
+  width: 360px;
+  height: 240px;
 }
