--- a/css/common.css
+++ b/css/common.css
@@ -1,9 +1,25 @@
 * {
-
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+:root {
+  --font-family: "Montserrat", sans-serif;
+}
+button{
+  border: none;
+  cursor: pointer;
+  border-radius: 8px;
+  padding: 8px 16px;
+  background: #4e75ff;
+}
+button:hover{
+  background: #6c8cff;
+}
+label:not(:last-child){
+  margin-bottom: 8px;
+}
 body {
   margin: 16px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
@@ -15,6 +31,36 @@ body {
   line-height: 1.5;
 }
 
+input {
+  padding: 8px 16px;
+  height: 40px;
+  width: 360px;
+  border-radius: 5px;
+  border: 1px solid #808080;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  background: #fff;
+  border-radius: 8px;
+  padding: 24px;
+  width: 408px;
+  height: 136px;
+}
+.login-form {
+  display: block;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  padding: 24px;
+  width: 408px;
+  height: 256px;
+}
+.form-container{
+  margin-bottom: 16px;
+}
 img {
   display: block;
   max-width: 100%;
@@ -26,8 +72,13 @@ ul {
   list-style: none;
 }
 
+p {
+  margin-bottom: 16px;
+}
+
 h2 {
-  margin: 0 0 16px;
+  margin-bottom: 16px;
+  font-family: var(--font-family);
 }
 
 .item {
@@ -52,6 +103,7 @@ h2 {
 .item:not(:last-child) {
   margin-bottom: 24px;
 }
+
 .gallery {
   display: flex;
   justify-content: center;
@@ -61,7 +113,11 @@ h2 {
   flex-basis: calc((100% - 48px) / 3);
   padding-block: 100px;
 }
-.gallery li{
+
+.gallery li {
   width: 360px;
   height: 240px;
+}
+label + input {
+  margin-bottom: 8px;
 }
