--- a/css/common.css
+++ b/css/common.css
@@ -16,6 +16,7 @@ button {
   padding: 8px 16px;
   background: #4e75ff;
   color: #fff;
+  transition: background 0.3s ease-in-out;
 }
 button:hover {
   background: #6c8cff;
@@ -32,6 +33,7 @@ body {
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+  transition: background 0.25s ease-in-out;
 }
 
 input {
