--- a/css/common.css
+++ b/css/common.css
@@ -107,6 +107,8 @@ h2 {
   gap: 48px 24px;
   flex-basis: calc((100% - 48px) / 3);
   padding-block: 100px;
+  width: 1128px;
+  margin: 0 auto;
 }
 
 .gallery li {
